# Demo

./: .gitignore  Claude的审核意见.md  start-game.bat  start-game.ps1  审查与建议.md
backend/: Dockerfile  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt
backend/docs/: ai_architecture.md  api_reference.md  information_frontier_spec.md  news_system_design.md  room_multiplayer_design.md
backend/scripts/: benchmark_openrouter_models.py  direct_discover.py  discover_models.py  fix_ids_discovery.py  inspect_openrouter.py  list_available_models.py  list_real_ids.py  seed_market.py
backend/scripts/neo4j/: init.cypher
backend/src/data/: ledger.db
backend/src/ifrontier/app/: api.py  main.py  room_engine.py  room_meta.py  ws.py
backend/src/ifrontier/core/: ai_logger.py  logger.py  (+1 more)
backend/tests/: conftest.py  test_bot_e2e_regression.py  test_chat_system.py  test_commonbot_emergency_execution_mode.py  test_commonbot_emergency_trigger.py  test_commonbot_llm.py  test_commonbot_strategy_v2.py  test_contract_agent.py  test_contract_rule_contract_vars.py  test_contract_rule_math_and_vars.py  test_contract_rules_limits.py  test_contract_transfer_expr.py  test_contracts.py  test_debug_endpoints.py  test_hosting.py  test_hosting_skills.py  test_market_data.py  test_matching_engine.py  test_news_cash_costs.py  test_news_intelligence_engine.py  test_news_long_window_regression.py  test_news_ownership.py  test_news_preset_params.py  test_news_store_purchase.py  test_news_suppression.py  test_news_system.py  test_news_tick_chain.py  test_player_trading.py
(+107 files in other folders)
