[project]
name = "information-frontier-backend"
version = "0.1.0"
description = "Information Frontier backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "neo4j>=5.16.0",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
